# chemical-converters

./: README.md  chemical_names_converters.py  pyproject.toml  requirements.txt  setup.py
chemicalconverters/: __init__.py
chemicalconverters/model_utils/: __init__.py  config.py  docstrings.py  model.py
chemicalconverters/names_converters/: models_description.json  names_converters.py
chemicalconverters/names_converters/models/: models_description.json
models/: models.json  models_description.json
models/smiles_test/: config.json  generation_config.json
